tests/a/tests/integrity/fail/if/if.1.stderr
error: expected {bin}{bin}, found {bin}{b,bin}
 --> tests/integrity/fail/if/if.1.rs:9:13
  |
9 |         x = 6;
  |             ^
